--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,9 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "variant": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "fstream": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     }
 }
