boost::mutex --> std::mutex

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,8 @@
         "vector": "cpp",
         "fstream": "cpp",
         "queue": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "numeric": "cpp",
+        "*.ipp": "cpp"
     }
 }
