--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "*.ipp": "cpp",
         "unordered_map": "cpp",
         "__hash_table": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "random": "cpp"
     }
 }
